Fix the addition of scrollbar when it's not required. Set most important structural parts of the table to have box-sizing: border-box so that heights are calculated consistently regardless of css styles.

--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,5 @@
 .st-root {
   height: 250px;
-  box-sizing: border-box;
 }
 
 .st-root * {
